# projeto_gamificacao

./: README.md
projeto_redis/: fundo-3d-moderno-com-linhas-fluidas-de-rosa-quente_1048-12263.avif  pyproject.toml
projeto_redis/projeto_quiz/: Dockerfile  docker-compose.yml  pyproject.toml  sistema_gamificado.ipynb
projeto_redis/projeto_quiz/app/: database.py  main.py  models.py
projeto_redis/projeto_quiz/frontend/: index.html
